--- a/Tutorium4/my-app/package.json
+++ b/Tutorium4/my-app/package.json
@@ -4,9 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "google-map-react": "^1.1.0",
     "prettier": "^1.15.2",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
+    "react-iframe": "^1.3.3",
     "react-jss": "^8.6.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.1"
