--- a/Tutorium4/my-app/package.json
+++ b/Tutorium4/my-app/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "google-map-react": "^1.1.0",
+    "jss-global": "^3.0.0",
     "prettier": "^1.15.2",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
